Mostrar personas desde arreglo, directivas *¨ngIf, *ngFor

--- a/angular.json
+++ b/angular.json
@@ -125,6 +125,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "mi-primera-app"
+    }
+  },
+  "defaultProject": "mi-primera-app",
+  "cli": {
+    "analytics": false
+  }
 }
